re-align right container flex column, fix centering

--- a/style/main.css
+++ b/style/main.css
@@ -77,6 +77,7 @@ p, span {
 }
 
 #joinTwitterContainer {
-    margin-top: 50%;
+    margin-top: 30%;
+    align-self: center;
 }
 
